// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OcModal > displays input 1`] = `
"<div class="oc-modal-background" aria-labelledby="oc-modal-title">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal oc-modal-passive" tabindex="0" role="dialog" aria-modal="true">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 id="oc-modal-title" class="oc-text-truncate">Create new folder</h2>
      </div>
      <div class="oc-modal-body">
        <!--v-if-->
        <!--v-if-->
        <oc-text-input-stub id="oc-textinput-1" type="text" modelvalue="New folder" clearbuttonenabled="false" clearbuttonaccessiblelabel="" disabled="false" label="Folder name" fixmessageline="true" readonly="false" passwordpolicy="[object Object]" class="oc-modal-body-input"></oc-text-input-stub>
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <div class="oc-modal-body-actions-grid">
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > hides icon if not specified 1`] = `
"<div class="oc-modal-background" aria-labelledby="oc-modal-title">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal oc-modal-passive" tabindex="0" role="dialog" aria-modal="true">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 id="oc-modal-title" class="oc-text-truncate">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message oc-mt-rm oc-mb-rm">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <div class="oc-modal-body-actions-grid">
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > matches snapshot 1`] = `
"<div class="oc-modal-background" aria-labelledby="oc-modal-title">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal oc-modal-passive" tabindex="0" role="dialog" aria-modal="true">
      <div class="oc-modal-title">
        <oc-icon-stub name="info" filltype="fill" accessiblelabel="" type="span" size="medium" variation="passive" color=""></oc-icon-stub>
        <h2 id="oc-modal-title" class="oc-text-truncate">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <p class="oc-modal-body-message oc-mt-rm oc-mb-rm">Example message</p>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <div class="oc-modal-body-actions-grid">
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;

exports[`OcModal > overrides props message with slot 1`] = `
"<div class="oc-modal-background" aria-labelledby="oc-modal-title">
  <focus-trap-stub active="true" escapedeactivates="true" returnfocusondeactivate="true" allowoutsideclick="true" clickoutsidedeactivates="false" initialfocus="[Function]" delayinitialfocus="true" preventscroll="false" setreturnfocus="false">
    <div class="oc-modal oc-modal-passive" tabindex="0" role="dialog" aria-modal="true">
      <div class="oc-modal-title">
        <!--v-if-->
        <h2 id="oc-modal-title" class="oc-text-truncate">Example title</h2>
      </div>
      <div class="oc-modal-body">
        <div class="oc-modal-body-message">
          <p>Slot message</p>
        </div>
      </div>
      <div class="oc-modal-body-actions oc-flex oc-flex-right">
        <div class="oc-modal-body-actions-grid">
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="passive" appearance="outline" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-cancel">Cancel</oc-button-stub>
          <oc-button-stub type="button" disabled="false" size="medium" submit="button" variation="primary" appearance="filled" justifycontent="center" gapsize="medium" showspinner="false" class="oc-modal-body-actions-confirm oc-ml-s">Confirm</oc-button-stub>
        </div>
      </div>
    </div>
  </focus-trap-stub>
</div>"
`;
